--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "path": "^0.12.7",
     "router": "^1.3.5",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
