--- a/Server/package.json
+++ b/Server/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "router": "^1.3.5",
@@ -21,6 +24,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "nodemon": "^2.0.7"
   }
 }
