--- a/Server/package.json
+++ b/Server/package.json
@@ -17,7 +17,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "router": "^1.3.5",
     "sequelize": "^6.6.2",
